<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_ValuesWrite" Id="{b3e39b20-f1ad-449d-9d3d-29a93d1d1f18}">
    <Declaration><![CDATA[TYPE ST_ValuesWrite :
STRUCT
	Description : STRING;
	Address 	: POINTER TO REAL;
	AddressLR	: POINTER TO LREAL;
	AddressUL	: POINTER TO ULINT;
	AddressUI	: POINTER TO UINT;
	Size		: UINT;
	Sampling	: DINT := 1000;		// Period of sampling
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>